before move to new origin

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,8 @@
 #button {
-  color: white;
+  color: black;
+}
+#button1 {
+  color: black;
 }
 #navbar_color {
   background-color: transparent !important;
@@ -10,4 +13,12 @@
 }
 a {
   text-decoration: none;
+}
+img {
+  width: 5vw;
+}
+#logo {
+  width: 7vw;
+  margin-left: 1vh;
+  border-radius: 100%;
 }
