--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,3 +6,129 @@ video {
   color: rgb(14, 13, 13);
   max-width: 100%;
 }
+.title {
+  text-align: center;
+  color: rgb(130, 134, 110);
+}
+
+.title h1 {
+  margin-top: 3vw;
+  font-size: 9vmin;
+}
+.title p {
+  margin-top: 3vw;
+  font-size: 2vmin;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.row img {
+  height: 45vh; /* Высота блока */
+  width: auto;
+  border: 2px solid rgb(130, 134, 110); /* Параметры рамки */
+  background: 100% 100% no-repeat; /* Добавляем фон */
+  background-size: cover; /* Масштабируем фон */
+}
+
+.row .col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: -1vw;
+  width: 505px;
+}
+.col h1 {
+  margin-top: 1vw;
+  font-size: 4vmin;
+  color: rgb(130, 134, 110);
+}
+.col p {
+  font-size: 2.5vmin !important;
+  color: rgb(130, 134, 110);
+}
+.practicelife .line {
+  width: 15vw;
+  height: 0.2vh;
+  background: rgb(159, 163, 142);
+}
+.practicelife .linee {
+  width: 55vw;
+  height: 0.5vh;
+  background: rgb(159, 163, 142);
+}
+
+.practicelife .row {
+  margin-top: 30px;
+}
+.row .col img {
+  width: 100%;
+  padding-bottom: 2vh;
+}
+
+.rower {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.lines {
+  margin-bottom: 3vh;
+  display: flex;
+  justify-content: center;
+  width: 25vw;
+  height: 0.4vh;
+  background: rgb(130, 134, 110);
+  align-items: center;
+}
+
+.videos {
+  transform: translateX(-1vw);
+  display: flex;
+  overflow-x: scroll;
+  width: 100vw;
+  height: auto;
+  transition: transform 0.3s ease;
+  background-image: linear-gradient(
+    147deg,
+    rgb(130, 134, 110) 20%,
+    #ff000000 88%
+  );
+}
+
+.videos::-webkit-scrollbar {
+  height: auto;
+  background-color: rgb(130, 134, 110);
+  outline: none;
+}
+
+.videos::-webkit-scrollbar {
+  height: 0.5vh;
+  outline: none;
+}
+
+iframe:last-child {
+  padding-right: 0.5vw;
+}
+
+.videos::-webkit-scrollbar {
+  border-radius: 3vh;
+  background: rgb(130, 134, 110);
+}
+img {
+  transition: transform 0.3s ease;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+ctn:hover {
+  background: #f1ebe8;
+  color: rgb(130, 134, 110);
+  box-shadow: 2px 2px 5px black;
+}
+.video-end {
+  height: 6vh;
+  width: auto;
+}
