--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,12 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #fcf6ec;
+  background-image: linear-gradient(
+    147deg,
+    rgb(125, 156, 125) 15%,
+    #ff000000 30%,
+    rgb(213, 226, 213) 10%,
+    #ff000000 30%,
+    rgb(217, 226, 217) 60%
+  );
 }
