--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,7 +8,7 @@ video {
 }
 .title {
   text-align: center;
-  color: rgb(130, 134, 110);
+  color: rgb(125, 142, 125);
 }
 
 .title h1 {
@@ -25,11 +25,11 @@ video {
   justify-content: space-between;
 }
 .row img {
-  height: 45vh; /* Высота блока */
+  height: 55vh;
   width: auto;
-  border: 2px solid rgb(130, 134, 110); /* Параметры рамки */
-  background: 100% 100% no-repeat; /* Добавляем фон */
-  background-size: cover; /* Масштабируем фон */
+  border: 0.5vh solid rgb(125, 142, 125);
+  background: 100% no-repeat;
+  background-size: cover;
 }
 
 .row .col {
@@ -42,21 +42,22 @@ video {
 .col h1 {
   margin-top: 1vw;
   font-size: 4vmin;
-  color: rgb(130, 134, 110);
+  color: rgb(125, 142, 125);
 }
 .col p {
   font-size: 2.5vmin !important;
-  color: rgb(130, 134, 110);
+  color: rgb(125, 142, 125);
+  margin-bottom: 3vh;
 }
 .practicelife .line {
   width: 15vw;
   height: 0.2vh;
-  background: rgb(159, 163, 142);
+  background: rgb(125, 142, 125);
 }
 .practicelife .linee {
   width: 55vw;
   height: 0.5vh;
-  background: rgb(159, 163, 142);
+  background: rgb(125, 142, 125);
 }
 
 .practicelife .row {
@@ -78,7 +79,7 @@ video {
   justify-content: center;
   width: 25vw;
   height: 0.4vh;
-  background: rgb(130, 134, 110);
+  background: rgb(125, 142, 125);
   align-items: center;
 }
 
@@ -91,14 +92,14 @@ video {
   transition: transform 0.3s ease;
   background-image: linear-gradient(
     147deg,
-    rgb(130, 134, 110) 20%,
+    rgb(125, 142, 125) 20%,
     #ff000000 88%
   );
 }
 
 .videos::-webkit-scrollbar {
   height: auto;
-  background-color: rgb(130, 134, 110);
+  background-color: rgb(125, 142, 125);
   outline: none;
 }
 
@@ -113,7 +114,7 @@ iframe:last-child {
 
 .videos::-webkit-scrollbar {
   border-radius: 3vh;
-  background: rgb(130, 134, 110);
+  background: rgb(125, 142, 125);
 }
 img {
   transition: transform 0.3s ease;
@@ -123,11 +124,11 @@ img:hover {
   transform: scale(1.1);
 }
 
-ctn:hover {
+/* ctn:hover {
   background: #f1ebe8;
-  color: rgb(130, 134, 110);
+  color: rgb(125, 142, 125);
   box-shadow: 2px 2px 5px black;
-}
+} */
 .video-end {
   height: 6vh;
   width: auto;
