--- a/src/components/Sidebar/Side.css
+++ b/src/components/Sidebar/Side.css
@@ -1,22 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .choose-type {
-  font-weight: 600;
-  font-size: 17px;
+  font-weight: 200;
+  font-size: 6vmin;
   text-align: center;
+  /* display: flex;
+  justify-content: center; */
 }
 
 .side-bar {
-  background: rgba(219, 120, 38, 0.35);
-  max-width: 300px;
-  height: auto;
+  background: rgb(125, 142, 125);
+  width: 100vw;
   padding: 8px;
-  color: #fff;
+  color: rgb(247, 240, 231);
   font-family: Cormorant Garamond;
-  font-weight: 400;
   padding-top: 14.5vh;
 }
 
 .css-vqmohf-MuiButtonBase-root-MuiRadio-root.Mui-checked {
-  color: #e89417 !important;
+  color: rgb(247, 240, 231) !important;
 }
